@@ -33,7 +33,6 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-
 import org.apache.iceberg.exceptions.ForbiddenException;
 import org.apache.polaris.core.PolarisCallContext;
 import org.apache.polaris.core.PolarisConfiguration;
@@ -1434,6 +1433,7 @@ public class PolarisMetaStoreManagerImpl implements PolarisMetaStoreManager {
    *
    * <p>{@link #dropEntityIfExists(PolarisCallContext, List, PolarisEntityCore, Map, boolean)}
    */
+  @SuppressWarnings("FormatStringAnnotation")
   private @NotNull DropEntityResult dropEntityIfExists(
       @NotNull PolarisCallContext callCtx,
       @NotNull PolarisMetaStoreSession ms,
@@ -1508,16 +1508,21 @@ public class PolarisMetaStoreManagerImpl implements PolarisMetaStoreManager {
 
     // Check that cleanup is enabled, if it is set:
     if (catalogPath != null && cleanup) {
-      boolean dropWithPurgeEnabled = callCtx
-          .getConfigurationStore()
-          .getConfiguration(
-              callCtx,
-              (CatalogEntity) catalogPath.getFirst(),
-              PolarisConfiguration.DROP_WITH_PURGE_ENABLED);
+      boolean dropWithPurgeEnabled =
+          callCtx
+              .getConfigurationStore()
+              .getConfiguration(
+                  callCtx,
+                  (CatalogEntity) catalogPath.get(0),
+                  PolarisConfiguration.DROP_WITH_PURGE_ENABLED);
       if (dropWithPurgeEnabled) {
-        throw new ForbiddenException("Unable to purge entity: " + entityToDrop + ". To enable this feature, " +
-            "set the Polaris configuration " + PolarisConfiguration.DROP_WITH_PURGE_ENABLED.key + " or the " +
-            "catalog configuration " + PolarisConfiguration.DROP_WITH_PURGE_ENABLED.catalogConfig());
+        throw new ForbiddenException(
+            String.format(
+                "Unable to purge entity: %s. To enable this feature, set the Polaris configuration %s "
+                    + "or the catalog configuration %s",
+                entityToDrop.getName(),
+                PolarisConfiguration.DROP_WITH_PURGE_ENABLED.key,
+                PolarisConfiguration.DROP_WITH_PURGE_ENABLED.catalogConfig()));
       }
     }
 
